--- a/hw1/style.css
+++ b/hw1/style.css
@@ -1,10 +1,69 @@
 .item {
     width: 300px;
     height: 200px;
-    background-color: rgba(0, 0, 0, 0.5);
+    background-color: rgba(0, 0, 0, 0.7);
+    margin: 2% 5%;
 }
 
-.item img {
+.item_box {
+    width: 1400px;
+    height: auto;
+
+    /* user info box treated as Flexbox */
+    display: flex;
+    flex-direction: row;
+    /* flex items break into multiple lines */
+    flex-wrap: wrap;
+    padding: 5% 10%;
+}
+
+body {
+    background-image: url("src/bg.jpg");
+    background-size: contain;
+    background-repeat: no-repeat;
+    background-attachment: fixed;
+    background-size: 100%;
+}
+
+div#black_filter {
+    background-color: rgba(0, 0, 0, 0.5);
+    position: fixed; /* relative to viewport */
+    top: 0;
+    left: 0;
     width: 100%;
-    height: 50%;
+    height: 100%;
+}
+
+div.user_info {
+    width: 100%;
+    height: 30%;
+    /* user img and texts are treated as Flexbox */
+    display: flex;
+    flex-direction: row;
+}
+
+div.item img.livestream_img {
+    width: 100%;
+    height: 60%;
+}
+
+div.item img.user_photo {
+    border-radius: 50%;
+    margin: 2%;
+    margin-right: 5%;
+    height: auto;
+    background-color: white;
+}
+
+div.texts {
+    color: white;
+}
+
+h3.channel_text {
+    margin-top: 0%;
+    margin-bottom: 5%;
+}
+
+p.user_text {
+    margin: 0%;
 }
